manifests/traefik/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt
    cert-manager.io/issuer-kind: ClusterIssuer
    acme.cert-manager.io/http01-ingress-class: traefik
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/ssl-temporary-redirect: "false"
spec:
  rules:
  - host: dashboard.example.org
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-api
          servicePort: admin
  tls:
  - hosts:
    - dashboard.example.org
    secretName: traefik-cert
